# nixos-rsbuild

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix  module.nix  package.nix  shell.nix
.github/workflows/: ci.yml
src/: cmd.rs  flake.rs  lib.rs  list_generations.rs  main.rs  todos.rs  utils.rs
src/cmd/: handlers.rs  parsers.rs  stashed.rs
src/flake/: attribute.rs  flake_path.rs
