[package]
name = "nixos-rsbuild"
version = "0.1.0"
authors = [ "Ben Pieters-Hawke <benphawke@gmail.com>" ]
description = """
`nixos-rsbuild` is a (slightly opinionated) rewrite of the `nixos-rebuild` cli utility.

The goals are as follows:

 - minimal barrier-of-entry to read/write the codebase in a meaningful way
 - provide a pleasant documentation/help UX
 - showcase Rust as an implementation tool in the nix/nixos ecosystem
 - (Initially): Stand-in replacement for most of my build/switch/etc. needs
 - (Stretch): Cover all supported use-cases of `nixos-rebuild`
"""
edition = "2021"
keywords = [ "nixos", "nix" ]
catagories = [ "command-line-utilities" ]
license = "Unlicense OR MIT"


[dependencies]
camino = "1.1.9"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
hostname = "0.4.0"
log = "0.4.22"
nix = { version = "0.29.0", features = ["user"] }
tempfile = "3.13.0"
